<resources>
    <string name="app_name">Maynilad</string>
    <string name="action_settings">Settings</string>

    <!-- Splash Screen -->
    <string name="splash_readwrite">Read and Bill</string>

    <!-- Menu Item Labels-->
    <string name="menu_item_mru">Meter Reading</string>
    <string name="menu_item_status">Status</string>
    <string name="menu_item_data_com">Data Sync</string>
    <string name="menu_item_settings">Option</string>
    <string name="menu_item_exit">Exit</string>


    <!--Status Screen Strings -->
    <string name="str_status_title">Status : </string>
    <string name="str_status_mrus">MRUs Loaded : </string>
    <string name="str_bill_month">Bill  Month : </string>
    <string name="str_reading_date">Reading Date : </string>
    <string name="str_start_time">Start Time : </string>
    <string name="str_end_time">End Time : </string>
    <!-- MRU List Strings-->
    <string name="str_mru_list_title">MRU(s)</string>
    <string name="str_mru_unread">Unread</string>
    <string name="str_mru_unprinted">Printed :</string>
    <string name="str_mru_unbilled">UnBilled :</string>
    <string name="str_mru_undelivered">UnDelivered:</string>
    <string name="str_mru_total">Total :</string>
    <string name="str_mru_id">MRU ID :</string>

    <!-- String fillers, to be deleted eventually!-->
    <string name="str_filterd">Filtered</string>
    <string name="str_sequence_num">SEQ Number</string>
    <string name="str_sample_text">XXXXXXXXXXXX</string>
    <!-- meter reading info  -->
    <string name="mr_meter_no">Meter no : </string>
    <string name="mr_rate_code">Bill Class : </string>
    <string name="mr_mru_number">MRU Number : </string>
    <string name="mr_mru_installation">Installation : </string>
    <string name="mr_can">CAN : </string>
    <string name="mr_name">Name : </string>
    <string name="mr_address">Address :</string>
    <string name="mr_reading">Reading : </string>
    <string name="mr_edit">Edit</string>


    <!-- meter reading custom info section -->
    <string name="mr_c_info_p_read_date">PREV RDG Date : </string>
    <string name="mr_c_info_p_reading">PREV RDG : </string>
    <string name="mr_c_info_observation">PREV Observation : </string>
    <string name="mr_c_info_oc1">OC1 : </string>
    <string name="mr_c_info_oc2">OC2 : </string>
    <string name="mr_c_info_remarks">Remarks : </string>
    <string name="print">Print</string>


    <!--  meter reading delivery remarks section -->
    <string name="mr_c_dev_rem_desc">Description : </string>
    <string name="mr_c_dev_rem_">Remarks : </string>
    <string name="mr_c_dev_code">Del Code : </string>
    <string name="mr_c_dev_sign">Ask For Signature</string>
    <string name="mr_c_dev_view_sign">View Signature</string>
    <string name="mr_c_remarks">Remarks</string>
    <string name="mr_c_description">Description</string>

    <!-- meter reading OC section -->
    <string name="mr_oc_oc1">OC1 : </string>
    <string name="mr_oc_oc2">OC2 : </string>


    <!-- action menus labels-->
    <string name="action_search">Search</string>
    <string name="action_new_meter">New Found Meter</string>
    <string name="action_customer">Customer Info</string>
    <string name="action_oc">OC</string>
    <string name="action_remarks">Remarks</string>
    <string name="action_delivery">Delivery Remarks</string>
    <string name="action_new_seq">New Sequence</string>

    <string name="search_title">Search</string>
    <string name="search_by">Search By :</string>
    <string name="search_value">Value :</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="content_desc">a button</string>
    <string name="enter_meter_reading">Enter meter reading</string>
    <string name="submit">Submit</string>
    <string name="title_activity_mreaders_list">MReadersListActivity</string>

    <string name="m_readers_title">Meter Readers</string>
    <string name="m_readers_assigned">Code :</string>
    <string name="m_readers_assign">Assign a Code</string>
    <string name="m_readers_meter_id">ID :</string>
    <string name="m_readers_name">Name :</string>
    <string name="title_activity_settings">Settings</string>

    <!--Settings -->
    <string name="setting_btn_login">Login as Rover Admin</string>
    <string name="setting_btn_login1">Login</string>
    <string name="setting_password_hint">Enter Password</string>

    <string name="dlg_new_seq_entry">New Sequence Entry</string>
    <string name="dlg_seq_num">Sequence Number</string>
    <string name="dlg_meter_code_enter">Enter Meter Code</string>
    <string name="dlg_meter_code">Meter Code</string>

    <string name="new_meter_found_seq">Seq Number</string>
    <string name="new_meter_found">Found Connected</string>

    <string name="lock_title_started">Started</string>
    <string name="lock_title_inprogress">In Progress</string>
    <string name="lock_title_completed">Completed</string>
    <string name="lock_title_halted">Halted</string>
    <string name="str_default_val">0</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_gps_logging">GPS Logging</string>
    <string name="settings_pair_bluetooth">Pair to Bluetooth Printer</string>
    <string name="settings_mr_stub">Print MR Stub</string>
    <string name="settings_rover_admin">Rover Admin Settings</string>
    <string name="settings_eod_printing">Print EOD Report</string>
    <string name="settings_rover_admin_account">Rover Administrator Account</string>

    <string name="changepass_title">Change Password</string>
    <string name="changepass_oldpass">Old Password</string>
    <string name="changepass_newpass">New Password</string>
    <string name="changepass_retypepass">Re-type Password</string>

    <string name="btn_save_str">Save</string>
    <string name="btn_cancel_str">Cancel</string>
    <string name="btn_change_str">Change</string>
    <string name="btn_capture_image">Capture Image</string>
    <string name="login">Login</string>
    <string name="title_activity_signature">SignatureActivity</string>
    <string name="str_remove">Remove</string>
    <string name="str_retake">Retake</string>
    <string name="title_activity_input_value">InputValue</string>


    <string name="str_enter_value">Enter Meter Reading</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="str_clear">Clear</string>
    <string name="str_enter">Enter</string>
    <string name="str_enter1">←</string>
    <string name="sign_done">Done Signing</string>
    <string name="sign_clear">Clear Signature</string>
    <string name="sign_cancel">Cancel</string>
    <string name="sign_recipient_name">Recipient Name: </string>

    <string name="lock_restart">Restart Application</string>
    <string name="sampletxt">Zebra\n343:22:22:22</string>
    <string name="save">Save</string>
    <string name="add_new_meter">Add New Meter</string>
    <string name="delete_meter">Delete Meter</string>


    <string name="connecting_to_printer">Connecting to printer&#8230;</string>
    <string name="connected_to_printer">Connected to printer</string>
    <string name="no_printer_selected">No printer selected</string>
    <string name="printer_name">Printer name:</string>
    <string name="printer_address">Printer address:</string>
    <string name="discovered_printers">Discovered printers</string>
    <string name="searching_for_printers">Searching for printers&#8230;</string>
    <string name="title_activity_change_status">ChangeStatusActivity</string>

    <string name="chg_rover_status">Change Rover Status</string>
    <string-array name="rover_statuses">
        <item>DOWNLOADED</item>
        <item>UPLOADED</item>
        <item>MODIFIED</item>
        <item>ALL READ</item>
    </string-array>
    <string name="billreprint_title">Bill Reprint</string>
    <string name="billreprint_txt1">There are %1d items to be printed!</string>
    <string name="billreprint_txt2">Start Printing?</string>
    <string name="billreprint_total">Total Items: %d</string>
    <string name="billreprint_item">Items Printed</string>
</resources>
