<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_input_value"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.indra.rover.mwsi.ui.activities.InputValueActivity"
    tools:showIn="@layout/activity_input_value">

    <TextView
        android:text="@string/str_enter_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTitle"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtValue"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:background="@drawable/panel_rounded_border"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:padding="10dp"
        android:gravity="end|center_vertical"
        android:textStyle="bold"
        android:textSize="40sp"
        android:maxLines="1"
        android:maxLength="7"
        />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="4"
        app:rowCount="4"
        android:layout_below="@+id/txtValue"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:alignmentMode="alignBounds"
        app:rowOrderPreserved="false"
        app:orientation="horizontal">

        <Button android:text="@string/num7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button7"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="7"/>
        <Button android:text="@string/num8"
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="8"/>
        <Button android:text="@string/num9"
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="9"/>
        <Button android:text="@string/str_enter1"
            android:id="@+id/btnBackSpace"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            />

        <Button android:text="@string/num4"
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="4"/>
        <Button android:text="@string/num5"
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="5"/>
        <Button android:text="@string/num6"
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="6"/>
        <Button android:text="@string/str_clear"
            android:id="@+id/btnClear"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill"
            style="@style/CalculatorButtonAction"
            android:onClick="onClick"/>

        <Button android:text="@string/num1"
            android:id="@+id/button1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="1"/>
        <Button android:text="@string/num2"
            android:id="@+id/button2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="2"/>
        <Button android:text="@string/num3"
            android:id="@+id/button3"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="3"/>
        <Button
            android:id="@+id/btnEnter"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_vertical"
            android:text="@string/str_enter"
            app:layout_rowSpan="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"

            style="@style/CalculatorButtonAction"/>

        <Button
            android:id="@+id/button0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal"
            android:text="@string/num0"
            app:layout_columnSpan="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/CalculatorButton"
            android:onClick="onClick"
            android:tag="0"/>
        <Button android:text="@android:string/cancel"
            android:id="@+id/btnCancel"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:textSize="12sp"
            style="@style/CalculatorButtonAction"/>

    </android.support.v7.widget.GridLayout>

</RelativeLayout>
