<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:layout_margin="10dp"
    android:background="@drawable/panel_rounded_border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_status_title"
        android:id="@+id/textView32"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="DOWNLOADED"
        android:id="@+id/txtStatusTitle"
        android:layout_alignTop="@+id/textView32"
        android:layout_toRightOf="@+id/textView32"
        android:layout_toEndOf="@+id/textView32"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/str_status_mrus"
        android:id="@+id/textView33"
        android:layout_below="@+id/textView32"
        android:layout_alignLeft="@+id/textView32"
        android:layout_alignStart="@+id/textView32" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/str_bill_month"
        android:id="@+id/textView34"
        android:layout_below="@+id/textView33"
        android:layout_alignLeft="@+id/textView33"
        android:layout_alignStart="@+id/textView33" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/str_reading_date"
        android:id="@+id/textView35"
        android:layout_below="@+id/textView34"
        android:layout_alignLeft="@+id/textView34"
        android:layout_alignStart="@+id/textView34" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_start_time"
        android:id="@+id/textView36"
        android:layout_below="@+id/textView35"
        android:layout_alignLeft="@+id/textView35"
        android:layout_alignStart="@+id/textView35" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_end_time"
        android:id="@+id/textView37"
        android:layout_below="@+id/textView36"
        android:layout_alignLeft="@+id/textView36"
        android:layout_alignStart="@+id/textView36" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:id="@+id/textView38"
        android:layout_below="@+id/txtStatusTitle"
        android:layout_toRightOf="@+id/textView33"
        android:layout_toEndOf="@+id/textView33"
        android:textStyle="bold" />
</RelativeLayout>