<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MRDeliveryRFragment"
    android:padding="10dp"
    android:background="@drawable/bg_dot_pattern">

    <Button
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:text="@string/mr_edit"
        android:id="@+id/btnEditMRDelivery"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_grey_rounded"
        android:textColor="@android:color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mr_c_dev_code"
        android:id="@+id/textView21"
        android:layout_below="@+id/btnEditMRDelivery"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:textStyle="bold" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView21"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_remove_outline"
        android:background="@drawable/btn_active_pink"
        android:padding="4dp"

        android:id="@+id/btnClrDeliv"
        android:contentDescription="@string/str_default_val" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/spnDevCode"
        android:layout_alignTop="@+id/textView21"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21"
        android:layout_toLeftOf="@+id/btnClrDeliv"
        android:layout_toStartOf="@+id/btnClrDeliv"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        style="@style/SpinnerTheme"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mr_c_description"
        android:id="@+id/textView22"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/txtMRDDesc"
        android:layout_below="@+id/textView22"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:hint="@string/mr_c_description"
        android:background="@drawable/txt_rounded_border"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mr_c_info_remarks"
        android:id="@+id/textView23"
        android:layout_below="@+id/txtMRDDesc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/txtMRDRemarks"
        android:layout_below="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:hint="@string/mr_c_remarks"
        android:background="@drawable/txt_rounded_border"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <Button
        android:text="@string/btn_save_str"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_above="@+id/textView21"
        android:layout_toLeftOf="@+id/btnEditMRDelivery"
        android:layout_toStartOf="@+id/btnEditMRDelivery"
        android:id="@+id/btnSaveDeliv"
        android:background="@drawable/btn_active_rounded"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>
</RelativeLayout>
