<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/material_grey_50">

    <ImageButton
        android:id="@+id/dlg_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_close_black"
        android:background="@android:color/transparent"
        android:layout_marginRight="@dimen/layout_margins"
        android:layout_marginEnd="@dimen/layout_margins"
        android:contentDescription="@string/content_desc" />

    <TextView
        android:id="@+id/dlg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margins"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/dlg_btn_close"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="@string/login"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dlg_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margins"
        android:layout_marginRight="@dimen/layout_margins"
        android:layout_marginStart="@dimen/layout_margins"
        android:layout_marginEnd="@dimen/layout_margins"
        android:layout_marginBottom="@dimen/layout_margins"
        android:padding="@dimen/layout_margins"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/dlg_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/txt_rounded_border"
        android:inputType="textPassword"
        android:hint="@string/setting_password_hint"
        android:maxLength="7"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/setting_btn_login1"
        android:id="@+id/dlg_btn_yes"
        android:textAllCaps="false"
        android:background="@drawable/btn_active_rounded"
        android:textColor="@android:color/white"
        android:layout_below="@+id/dlg_body"
        android:layout_alignStart="@+id/dlg_body"
        android:layout_alignLeft="@+id/dlg_body"
        android:contentDescription="@string/btn_cancel_str" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/btn_cancel_str"
        android:textAllCaps="false"
        android:id="@+id/dlg_btn_no"
        android:layout_below="@+id/dlg_body"
        android:layout_alignEnd="@+id/dlg_body"
        android:layout_alignRight="@+id/dlg_body"
        android:background="@drawable/btn_grey_rounded"
        android:textColor="@android:color/white"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_margins"
        android:layout_below="@+id/dlg_btn_no"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        />
</RelativeLayout>