<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:text="@string/btn_cancel_str"
        android:id="@+id/btnCancel"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_grey_rounded"
        android:textColor="@android:color/white"
        android:visibility="gone"
        />
    <Button
        android:text="@string/btn_save_str"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_toLeftOf="@+id/btnCancel"
        android:layout_toStartOf="@+id/btnCancel"
        android:id="@+id/btnSave"
        android:background="@drawable/btn_active_rounded"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:text="@string/mr_edit"
        android:id="@+id/btnEdit"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_active_rounded"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_edit"
        android:drawableLeft="@drawable/ic_edit"
        />

</RelativeLayout>