<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.indra.rover.mwsi.ui.activities.SignatureActivity"
    tools:showIn="@layout/activity_signature"
   >



    <TextView
        android:text="@string/mr_c_dev_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTitle"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_margin="5dp"/>
    <com.indra.rover.mwsi.ui.widgets.SignatureArea
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtTitle"
        android:id="@+id/signPanel">

    </com.indra.rover.mwsi.ui.widgets.SignatureArea>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:hint="@string/sign_recipient_name"
        android:ems="10"
        android:id="@+id/editText"
        android:padding="5dp"
        android:background="@drawable/txt_rounded_border"
        android:layout_below="@+id/signPanel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:text="@string/sign_done"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnDoneSign"
        android:background="@drawable/btn_active_rounded"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:onClick="onClick"/>

    <Button
        android:text="@string/sign_clear"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnClearSign"
        android:background="@drawable/btn_active_rounded"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:onClick="onClick"/>

    <Button
        android:text="@string/sign_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/btnDoneSign"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnCancel"
        android:background="@drawable/btn_active_rounded"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:onClick="onClick"/>

</RelativeLayout>
